# python-getdents

./: .editorconfig  .gitignore  LICENSE  README.rst  build-wheels.sh  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml
getdents/: __about__.py  __init__.py  __main__.py  _getdents.c  _getdents.pyi  cli.py  formatters.py
tests/: test___init__.py  test__getdents.py  test_cli.py  test_formatters.py
