[build-system]
requires = ["setuptools>=70.1"]

[project]
name = "getdents"
authors = [
    {name = "ZipFile", email = "zipfile.d@protonmail.com"},
]
description = "Python binding to linux syscall getdents64."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["getdents"]
license = {text = "BSD-2-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Filesystems",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/ZipFile/python-getdents"

[project.scripts]
python-getdents = "getdents.cli:main"

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-pyproject",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["getdents"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "getdents.__about__.__version__"}

[tool.setuptools.package-data]
getdents = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov"
minversion = "7.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["getdents/__main__.py"]
source = ["getdents"]

[tool.isort]
profile = "black"

[tool.flake8]
application-import-names = ["getdents"]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
strict = true
warn_unused_configs = true

[tool.cibuildwheel]
archs = ["native"]
test-command = "pytest --import-mode=importlib -p no:cacheprovider {project}/tests"
test-requires = ["pytest", "pytest-cov"]

[tool.cibuildwheel.linux]
repair-wheel-command = [
    "auditwheel repair -w {dest_dir} {wheel}",
    "if [[ {wheel} =~ -abi3-.*\\.whl ]]; then pipx run abi3audit --strict --report {wheel}; fi",
]
